# btp-genai-starter-kit

./: .gitignore
config/: Dockerfile  requirements.in  requirements.txt
scripts/step03_explore_examples/: README.md
scripts/step03_explore_examples/01_naive_rag/: pyproject.toml
scripts/step03_explore_examples/02_advanced_rag/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/03_vision_model/: main.py  pyproject.toml
scripts/step03_explore_examples/03_vision_model/modules/: config.py  process.py
scripts/step03_explore_examples/04_rag_on_mixed_data/: pyproject.toml
scripts/step03_explore_examples/05_multi_modal_rag/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/05_multi_modal_rag/src/: __init__.py  config.py  process.py
scripts/step03_explore_examples/advanced_rag/: main.py  pyproject.toml
scripts/step03_explore_examples/example02/: README.md
scripts/step03_explore_examples/example02/01_split_data/: README.md  split_data.py
scripts/step03_explore_examples/example04/: README.md  ingest_data.py  rag_on_structured_and_unstructured_data.py
scripts/step03_explore_examples/example05/: ingest_data.py
scripts/step03_explore_examples/multi_modal_rag/: .env.template  README.md  pyproject.toml
scripts/step03_explore_examples/multi_modal_rag/multi_modal_rag/: main.py
scripts/step03_explore_examples/multi_modal_rag/multi_modal_rag/agents/: tools.py
scripts/step03_explore_examples/multi_modal_rag/multi_modal_rag/constants/: prompts.py
scripts/step03_explore_examples/naive_rag/: README.md  main.py
scripts/step03_explore_examples/rag_on_mixed_data/: README.md  main.py  pyproject.toml
scripts/step03_explore_examples/utils/: pyproject.toml
scripts/step03_explore_examples/utils/utils/: __init__.py  env.py  hana.py  rag.py
(+11 files in other folders)
