[tool.poetry]
name = "vision-model"
version = "0.1.0"
description = "Sample is showing how to use vision models via plain http calls"
authors = ["romaniam"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = "^2.8.2"
requests = "^2.32.3"
langchain-core = "^0.2.16"
generative-ai-hub-sdk = "^1.11.1"
langchain-google-genai = "^1.0.7"
langchain = "^0.2.7"
langchain-openai = "^0.1.15"
utils = { path = "../utils", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
